--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,83 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background: linear-gradient(#1c5380, #06365f 33%, white 0%, white);
+  height: 100vh;
+}
+
+.photo {
+  width: 49%;
+  text-align: center;
+  height: 500px;
+  float: left;
+}
+.phones {
+  text-align: center;
+}
+.content {
+  width: 49%;
+  height: 500px;
+  float: left;
+}
+
+.wrapper {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 70px; 
+  position: relative;
+  
+}
+
+.clearfloat {
+  clear: both;
+}
+
+.logo {
+  width: 230px;
+}
+
+.button {
+  background: linear-gradient(#1c5380, #06365f);
+  padding: 10px 10px;
+  border-radius: 10%;
+  position: absolute;
+  text-decoration: none;
+  color: white;
+  margin-left: 190px;
+  border: 1px solid #1c5380;
+}
+
+.button span{
+  position: relative;
+  top: -4px;
+  left: 2px;
+}
+
+.text {
+  background: url("../images/frame.png");
+
+  padding: 30px 40px 30px 40px;
+  background-size: cover;
+}
+
+.text p {
+  margin: 10px 0;
+}
+
+.badge {
+  width: 150px;
+  height: 45px;
+}
+
+nav {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 50px;
 }
