--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,49 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.blue-gradient{
+  height:300px;
+  background: rgb(6,54,95);
+background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 100%);
+}
+.float{
+  float:left;
+}
+.clearfix{
+  clear: both;
+}
+.col-2{
+  box-sizing:border-box;
+}
+.main{
+  width:60%;
+  margin:0 auto;
+  position:relative;
+}
+.overlap{
+  position:absolute;
+  top: -200px;
+}
+.card{
+  background-color:#fff;
+  border-radius:5px;
+  padding:10px 40px 20px 40px;
+  -webkit-box-shadow: 6px 6px 14px -4px rgba(0,0,0,0.54);
+-moz-box-shadow: 6px 6px 14px -4px rgba(0,0,0,0.54);
+box-shadow: 6px 6px 14px -4px rgba(0,0,0,0.54);
+}
+h3{
+  font-size: 2em;
+  color: #06365f;
+}
+.login{
+  color:#fff;
+  background-color:#3B6380;
+  border-radius:5px;
+  text-decoration:none;
+  padding:10px;
+  font-weight: bolder;
+}
+.download-btn{
+  margin: 20px 0 0 50px;
+}
