--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,7 +5,7 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
 .blue-gradient{
@@ -35,9 +35,9 @@ background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 100%);
   background-color:#fff;
   border-radius:5px;
   padding:10px 40px 20px 40px;
-  -webkit-box-shadow: 6px 6px 14px -4px rgba(0,0,0,0.54);
--moz-box-shadow: 6px 6px 14px -4px rgba(0,0,0,0.54);
-box-shadow: 6px 6px 14px -4px rgba(0,0,0,0.54);
+  box-shadow: -1px -2px 10px 0px rgba(0,0,0,0.48);
+  -webkit-box-shadow: -1px -2px 10px 0px rgba(0,0,0,0.48);
+  -moz-box-shadow: -1px -2px 10px 0px rgba(0,0,0,0.48);
 }
 h3{
   font-size: 2em;
@@ -45,12 +45,34 @@ h3{
 }
 .login{
   color:#fff;
-  background-color:#3B6380;
+  background: rgb(6,54,95);
+  background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 100%);
   border-radius:5px;
   text-decoration:none;
   padding:10px;
   font-weight: bolder;
+  margin-top: 10px;
 }
+
 .download-btn{
   margin: 20px 0 0 50px;
+}
+
+
+.footer-box nav ul{
+  width:900px;
+  display:flex;
+  bottom: 10px;
+  position: absolute;
+  justify-content: space-between;
+  padding-left: 400px;
+  list-style-type: none;
+}
+.footer-box nav ul li{
+  color: #1c5380;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.copyright{
+  color:grey;
 }
