--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,150 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
+/* reseteo de CSS */
+
+html,
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul,
+li,
+pre,
+code,
+address,
+variable,
+form,
+fieldset,
+blockquote {
+    padding: 0;
+    margin: 0;
+    font-size: 100%;
+    font-weight: normal;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+td,
+th,
+caption {
+    font-weight: normal;
+    text-align: left;
+}
+
+img,
+fieldset {
+    border: 0;
+}
+
+ol {
+    padding-left: 1.4em;
+    list-style: decimal;
+}
+
+ul {
+    padding-left: 1.4em;
+    list-style: square;
+}
+
+q:before,
+q:after {
+    content: '';
+}
+
+
+/*  ***************************************************************************************************************   */
+
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+    background: linear-gradient( #1c5380 5%, white 95%);
+    background-repeat: no-repeat;
+    width: 1200px;
+    height: 600;
+}
+
+.moviles {
+    position: relative;
+    left: 100px;
+    margin-top: 50px;
+    margin-left: 50px;
+}
+
+.log {
+    border: 1px solid #1c5380;
+    border-radius: 5%;
+    color: white;
+    background-color: #1c5380;
+    padding: 7.5px;
+    width: 100px;
+    text-align: end;
+    position: relative;
+    top: -30px;
+    left: 65px;
+    ;
+}
+
+.home {
+    position: absolute;
+    top: 30%;
+    left: 95%;
+    padding-top: 5px;
+}
+
+.text {
+    position: absolute;
+    top: 200px;
+    left: 500px;
+    margin-top: 20px;
+    background: white;
+    width: 450px;
+    height: 350px;
+    color: #06365f;
+    padding: 40px;
+}
+
+.text img {
+    margin-top: 10%;
+}
+
+h2 {
+    font: bold;
+    font-size: 25px;
+}
+
+.encabezado {
+    position: absolute;
+    left: 500px;
+    top: 100px;
+}
+
+.important ul {
+    list-style: none;
+    position: absolute;
+    left: 20%;
+    top: 95%;
+}
+
+.important li {
+    display: block;
+    float: left;
+    text-align: center;
+    color: #06365f;
+    text-transform: uppercase;
+    padding-right: 10px;
+    font-weight: 9px;
+}
+
+.important ul:last-child {
+    padding-left: 35px;
 }
