--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,56 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.fondo {
+  background-image:url("../images/bgtile.png") ; 
+  width: 100%;
+  height: 300px;
+  position: relative;
+}
+
+.phones {
+  position: absolute;
+  top: 100px;
+  left: 20%;
+}
+.frame {
+  position: absolute;
+  left: 45%;
+  top: 180px;
+}
+.side-info {
+  position: absolute;
+  width: 450px;
+  top: 100px;
+  left: 50%;
+  color: #292929;
+}
+
+.brand {
+  
+}
+
+.side-info button {
+  width:100px;
+  height:40px;
+  background-color:#4F799D;
+  color:white;
+  border-radius: 5px;
+  border-width: 1px;
+  border-color: navy;
+  float: right;
+
+}
+
+h1 {
+  color:#0A345A;
+}
+
+footer {
+  position: absolute;
+  top: 650px;
+  left: 30%;
+  color: #688BAA;
+  text-transform: uppercase;
+}
