--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,68 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.fondo button{
+  position: relative;
+  height: 50px;
+  border: 0px;
+  border-radius: 2px;
+  background-image: linear-gradient(#08528f,#06365f);
+  color: white;
+  width: 100px;
+  top: -12px;
+  left: 10px;
+}
+.fondo i{
+  position: absolute;
+  top: 25%;
+  left: 0px;
+}
+.fondo span{
+  position: absolute;
+  right: 10px;
+  top: 40%;
+}
+.fondo img:first-child{
+  margin-left:55%;
+  margin-top: 10%;
+}
+.fondo{
+    background-image: linear-gradient(#1c5380,#06365f);
+    background-size: cover;
+    height: 300px;
+    position: relative;
+  
+}
+.telefonos{
+    position: absolute;
+    float: left;
+    top: 100px;
+    left: 100px;
+}
+.card{
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  box-sizing:border-box;
+  padding: 30px;
+  height: 300px;
+  width:500px;
+  position: absolute;
+  float: left;
+  top: 220px;
+  right: 100px;
+  border-radius: 5px;
+
+}
+.card h1{
+  color:rgb(11, 11, 110);
+}
+.card img{
+ margin-left: 30px;
+}
+.footer{
+  display: inline;
+  color: #06365f;
+  position: absolute;
+  bottom: 10px;
+  left: 30%;
+}
