--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,149 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
+/* Colors to use: dark blue: #06365f light blue: #1c5380 */
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color:white;
 }
+
+#blue {
+  background-image: linear-gradient(#4378a3, #06365f);
+  height: 40%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+#blue div {
+  position: relative;
+}
+
+.brand {
+  position: absolute;
+  float: right;
+  right: 30%;
+  bottom: -175px;
+}
+
+#blue div button{
+  position: absolute;
+  float: right;
+  right: 16%;
+  bottom: -155px;
+  width: 100px;
+  height: 40px;
+  background: linear-gradient(#4378a3, #06365f);
+  border-color: #06365f;
+  border-radius: 10%
+} 
+
+.iphone {
+  position: absolute;
+  float: left;
+  left: 10%;
+  bottom: -590px;
+
+}
+
+#white {
+  position: relative;
+  height: 50%;
+  width: 100%;
+}
+
+.recuadro {
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  box-sizing: border-box;
+  position: absolute;
+  width: 40%;
+  height: 210px;
+  float: right;
+  right: 15%;
+  bottom: -400px;
+  padding: 3%;
+}
+.recuadro img {
+  margin-left: -15px;
+  padding: 15px 15px;
+}
+
+a {
+  color: #1c5380;
+  list-style: none;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+span {
+  color: gainsboro;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+footer {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 10px;
+}
+
+h1 {
+  color: #06365f;
+  margin: 0;
+  font-size: 25px;
+
+
+
+
+
+
+
+
+
+
+
+/* 
+h1 {
+  color: #06365f;
+  margin: 0;
+  font-size: 20px;
+}
+
+
+section {
+  padding: 5%;
+}
+
+article {
+  padding: 2%;
+}
+
+
+.imagenprinc {
+  float: left;
+}
+
+.recuadro {
+  margin: 0;
+  padding: 2%;
+  background-image: url("../images/frame.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  float: left;
+  width: 50%;
+}
+
+.recuadro article{
+  position: relative;
+  text-align: center;
+}
+
+button {
+  background-image: linear-gradient(#4378a3, #06365f);
+  border-color: #09355c;
+  border-radius: 10%;
+}
+ */
+
