--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,13 +3,14 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 *{
   margin:0;
   padding: 0;
 }
 body {
   background-color: white;
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin: 0;
   padding: 0;
 }
