--- a/starter-code/main.css
+++ b/starter-code/main.css
@@ -16,12 +16,34 @@ body {
   position:absolute;
   margin-top:12%;
   margin-left:20%;
+  width:400px;
 }
 .insta{
   background-repeat: no-repeat;  
   margin-left: 47%;
   margin-top: 12%;
   position: relative;
+  width:400px;
+}
+
+.log-in{
+  background-color:#1c5380;
+  color:white;
+  border:none;
+  width: 120px;
+  height:60px;
+  margin-top: 245px;
+  float:right;
+  padding-left:50px;
+  margin-right: 300px;
+  font-size: 20px;
+}
+
+.home{
+  background-image: url("images/home.png");
+  position: absolute;
+  margin-top:260px;
+  margin-left: 180px; 
 }
 
 .text{
@@ -40,7 +62,7 @@ body {
   width: 340px;  
 }
 
-.capt{
+.capt {
   color: darkblue;
 }
 
@@ -50,7 +72,34 @@ p {
   padding-left: 50px;
 }
 
-span{
+span {
   font-weight: bold;
 }
 
+.iphone {
+  padding-left:50px;
+  width: 200px;
+}
+
+.android{
+  padding-left:30px;
+  width: 180px;
+}
+
+.list li{
+  display: inline-block;
+  margin: 0 10px;
+  font-size: 20px;
+  color: darkblue;
+}
+
+.footer{
+  margin-bottom: 0;
+  float: left;
+  margin-top: 170px;
+  margin-left: 450px;
+}
+
+.list .number{
+  color:grey;
+}
