--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,115 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.background {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  height: 300px;
+  position: relative;
+  overflow: hidden;
+}
+
+li {
+  display: inline;
+}
+
+.info-box {
+  margin-top: 0px;
+  width: 504px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+
+
+}
+.info-box-content {
+  width: 90%;
+  overflow: hidden;
+  display: inline-block;
+  margin: 25px;
+  
+}
+
+.img-store {
+  float: right;
+  width: 100%;
+
+}
+.img-store div{ 
+  float:left;
+}
+.brand {
+  float: left;
+  margin: 0 0 0px 4px;
+}
+.login-button {
+  float: right;
+  padding: 25px 20px;
+}
+
+
+.phones-container {
+  float: left;
+  margin: 0 0 0 370px;
+  
+}
+
+.store-box {
+  margin: 0 0 0 10px;
+}
+
+.main-container {
+  float: left;
+  margin: 0 0 0 50px;
+}
+
+.header {
+  width: 504px;
+}
+
+.clearfix {
+  clear: both;
+}
+
+.footer {
+  position: absolute;
+  width: 100%;
+  top: 700px;
+  left: 26%;
+}
+
+.home-icon {
+  margin: 0 4px 0 0;
+  vertical-align: bottom;
+}
+
+.page-content {
+  position: absolute;
+  top: 125px;
+}
+
+h1 {
+  color: #0E3559;
+}
+ul {
+  color: #4F799C;
+  font-weight: bold;
+}
+ul li + li {
+  margin-left: 1%;
+}
+
+.instagram-copy {
+  color: #BBBCBD;
+}
+
+button {
+  background: #0E3559;
+  border: 0px;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 2px;
+}
+span {
+  margin: 0 0 0 7px;
+}
