--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -20,9 +20,8 @@ body {
 
 .inner-container {
   margin: auto; 
-  width: 80%;
+  width: 60%;
   height: 100%;
-  background-color: aqua;
 }
 
 .left-side-container {
@@ -32,12 +31,85 @@ body {
 
 .right-side-container {
   float: right;
-  width: 40%;
-  margin: 10%;
+  width: 45%;
+  margin: 5%;
 }
 
 #phones {
   margin: 10%;
+}
+
+.text {
+  padding: 30px;
+  background-repeat: no-repeat;
+  width: 120%;
+  background-image: url("/home/rickalon/Desktop/IH/lab-css-instagram-clone/starter-code/images/frame.png");
+  background-size: cover;
+}
+
+button {
+  
+  position: absolute;
+  text-align: center;
+  margin: 20px 0px 0px 60px;
+	-moz-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
+	box-shadow:inset 0px 1px 0px 0px #bbdaf7;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #79bbff), color-stop(1, #378de5));
+	background:-moz-linear-gradient(top, #79bbff 5%, #378de5 100%);
+	background:-webkit-linear-gradient(top, #79bbff 5%, #378de5 100%);
+	background:-o-linear-gradient(top, #79bbff 5%, #378de5 100%);
+	background:-ms-linear-gradient(top, #79bbff 5%, #378de5 100%);
+	background:linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#79bbff', endColorstr='#378de5',GradientType=0);
+	background-color:#3372b1;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #84bbf3;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #1a548f;
+}
+.myButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #378de5), color-stop(1, #79bbff));
+	background:-moz-linear-gradient(top, #378de5 5%, #79bbff 100%);
+	background:-webkit-linear-gradient(top, #378de5 5%, #79bbff 100%);
+	background:-o-linear-gradient(top, #378de5 5%, #79bbff 100%);
+	background:-ms-linear-gradient(top, #378de5 5%, #79bbff 100%);
+	background:linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#378de5', endColorstr='#79bbff',GradientType=0);
+	background-color:#378de5;
+}
+
+#googleplay {
+  padding: 10px 10px 10px 0;
+  float: left;
+}
+
+#applestore {
+  padding: 10px;
+  float: left;
+}
+
+h1 {
+  color: #1a548f;
+
+}
+
+span {
+  margin: 7px 7px 7px 0;
+}
+
+footer {
+  text-align: center;
+  clear: both;  
 }
 
 
