--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,47 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  position:relative;
 }
+.blue-background {
+  position:relative;
+  background-image: url(../images/bgtile.png);
+  /*background-color: #1c5380;*/
+  background-repeat: repeat-x;
+  width: 100%;
+  heigth: 38%;
+}
+.container {
+  display:inline;
+  position:relative;
+  top:-40px; left:-65px 
+}
+.copyright {
+  color: grey;
+}
+footer {
+  clear:both;
+}
+
+h3 {
+  color: #06365f;
+}
+
+#footer-links li {
+  float:left;
+  text-align: center;
+  list-style: none outside;
+  padding: 10px; 
+  width : 12,5%;   
+}
+#phones {
+  float: left;
+  box-sizing:border-box;
+  width:49%;
+}
+
+#text {
+  width:49%;
+  float:right;
+}
+
