--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,66 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  float: none;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.mobile-phones {
+  position: relative;
+  margin: 50px;
+  padding-top
+}
+
+.blue-box {
+  background-color:  #1c5380;
+  position: relative;
+  width: 1000px;
+  height: 500px;
+}
+
+.text-box {
+  background-color: white;
+  border: 1px;
+  margin: 0 auto;
+  position: relative;
+  width: 400px;
+  height: 300px;
+  padding: 50px;
+  border: 10px;
+  border-radius: 10px;
+}
+
+h2 {
+  color: #06365f;
+}
+
+.app-logo {
+  margin-top:20px;
+  float left;
+  clear: both;
+}
+
+.play-logo { 
+  margin-bottom: 60px;
+  padding-top: 0px;
+  float: right;
+  clear: both;
+}
+
+.links-box {
+ text-transform: uppercase;
+ color: #06365f;
+}
+
+footer {
+  text-transform: uppercase;
+  color: grey;
+  float: right;
 }
