--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,28 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.header {
+  background-image: url("../images/bgtile.png");
+  height: 400px;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+ 
+.nav-bar-li {
+  list-style-type: none;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.brand {
+  background-image: url("../images/brand.png;");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.text {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  display: block;
+  }
