--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,42 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url('../images/bgtile.png');
+  background-repeat: no-repeat;
+  background-size: 100% 300px;
+}
+.container {
+  margin: 0 auto;
+  width: 75%;
+}
+.instagram {
+  width: 200px;
+  height: 150px;
+  border: 1px solid black;
+  position: relative;
+  margin-right: 100px;
+  margin-top: 100px;
+  
+}
+.phones {
+  float: left;
+  border: 1px solid black;
+  width: 30%;
+  margin-top: 150px;
+  margin-right: 50px;
+}
+.information {
+  background-image: url('../images/frame.png');
+  background-repeat: no-repeat;
+  float: left;
+  width: 400px;
+  margin-top: 150px;
+}
+.text {
+  width: 300px;
+  margin-left: 60px;
+  margin-top: 50px;
+}
+.footer {
+  clear: both;
 }
