--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,7 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.header{
+  background-color: rgb(76, 104, 215);
+  height: 400px;
+}
