--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,49 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+body {
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+  
+}
+header {
+  background:linear-gradient(#1c5380, #06365f);
+  
+  padding-top: 25%;
+  position: relative;
+}
+#family{
+  position: relative;
+  clear: both;
+}
+
+p{
+  text-align: center;
+  font-size: 10px;
+}
+.phone{
+  position:absolute;
+  top:-120px;
+  left:20%;
+}
+
+.text{
+  top: -120px;
+  position: relative;;
+  left: 50%;
+}
+
+.down{
+  position: absolute;
+  
+  top: 1000px;
+  left:40%;
+}
+#family h1, p{
+  position: absolute;
+  top:-100px;
+
+  
+  
+}
