--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,76 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
+body header {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: -8px;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+  height: 250px;
+  position: relative;
+ /* height: 100px; */
+  
+}
+
+body header img {
+  height: 128px;
+}
+
+body .segunda{
+  float: right;
+  position: relative;
+  top: -57px;
+}
+
+body .capture {
+  width: 429px;
+  height: 400px;
+  float: right; 
+  padding: 83px;
+  top:-57px;
+
+}
+
+.segunda .capture{
+  position: relative;
+  float: right;
+  top:-80px; 
+}
+
+body .segunda .iphone {
+  position: relative;
+  float: left;
+  top:-80px; 
+
+}
+
+
+body .pie{
+  text-align: center;
+  padding-top: 523px;
+  margin:46px;
+
+  
+}
+
+.segunda .capture a{
+  border-radius:20px; 
+}
+
+nav a{
+  text-decoration: none;
+  
+}
+
+.home{
+
+  position: absolute;
+  top: 75px;
+  right: 80px;
+  background: rgb(123, 225, 238);
+}
+
+.instagram{
+  position: absolute;
+  top: 50px;
 }
